Set version to 2

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,5 +1,7 @@
 # Document: http://goreleaser.com
 # This config is for normal release. See .goreleaser-nightly.yml for nightly release.
+version: 2
+
 before:
   hooks:
     - go mod download
